tests/compilation_failure_tests/non_enum/tuple_struct_nonempty.stderr
error: Struct Struct is not an enum, EnumRotate can only be derived for enums
 --> tests/compilation_failure_tests/non_enum/tuple_struct_nonempty.rs:4:1
  |
4 | struct Struct(usize);
  | ^^^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compilation_failure_tests/non_enum/tuple_struct_nonempty.rs:4:22
  |
4 | struct Struct(usize);
  |                      ^ consider adding a `main` function to `$DIR/tests/compilation_failure_tests/non_enum/tuple_struct_nonempty.rs`
